# Master_practice_projects

./: .gitignore  pyproject.toml
1Doscillator_project/: main.py
1Dpoisson_solver/: 1D_poisson_nnx.py  1D_poisson_solver_with_flax.py  1D_poisson_solver_without_flax.py
