[project]
name = "master-prep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flax>=0.12.0",
    "jax>=0.7.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "optax>=0.2.6",
    "torch>=2.8.0",
]

[dependency-groups]
dev = [
    "ipynb>=0.5.1",
    "ipython>=9.5.0",
    "notebook>=7.4.7",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
